force-app/main/default/objects/Trip__c/fields/Enable_Trip_Day_Automation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Trip_Day_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Trip Day Automation</label>
    <type>Checkbox</type>
</CustomField>