force-app/main/default/objects/Trip__c/fields/End_Weekday__c.field-meta.xml
<CustomField>
    <fullName>End_Weekday__c</fullName>
    <formula>IF(WEEKDAY(End_Date__c) == 1, &apos;Sunday&apos;,
IF(WEEKDAY(End_Date__c) == 2, &apos;Monday&apos;,
IF(WEEKDAY(End_Date__c) == 3, &apos;Tuesday&apos;,
IF(WEEKDAY(End_Date__c) == 4, &apos;Wednesday&apos;,
IF(WEEKDAY(End_Date__c) == 5, &apos;Thursday&apos;,
IF(WEEKDAY(End_Date__c) == 6, &apos;Friday&apos;,
IF(WEEKDAY(End_Date__c) == 7, &apos;Saturday&apos;, &apos;Unknown&apos;
)))))))</formula>
    <label>End Weekday</label>
    <type>Text</type>
</CustomField>