force-app/main/default/objects/Trip__c/fields/Mode_Of_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Transportation__c</fullName>
    <label>Mode Of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>