force-app/main/default/objects/Trip__c/fields/Parent_Trip__c.field-meta.xml
<CustomField>
    <fullName>Parent_Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>