force-app/main/default/objects/Trip__c/recordTypes/Multiple_Locations.recordType-meta.xml
<RecordType>
    <fullName>Multiple_Locations</fullName>
    <active>true</active>
    <label>Multiple Locations</label>
</RecordType>