force-app/main/default/objects/Trip__c/recordTypes/Single_Location.recordType-meta.xml
<RecordType>
    <fullName>Single_Location</fullName>
    <active>true</active>
    <label>Single Location</label>
</RecordType>