force-app/main/default/objects/Trip__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
NOT(ISNULL( Start_Date__c )) &amp;&amp; NOT(ISNULL( End_Date__c )),
(Start_Date__c &gt; End_Date__c || Start_Date__c == End_Date__c),
FALSE)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be before End Date.</errorMessage>
</ValidationRule>