force-app/main/default/objects/Trip__c/validationRules/Parent_Trip_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Trip_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISNULL( Parent_Trip__c )),
Parent_Trip__r.RecordType.DeveloperName == &apos;Single_Location&apos;,
FALSE)</errorConditionFormula>
    <errorDisplayField>Parent_Trip__c</errorDisplayField>
    <errorMessage>Please find the correct Multi-Location Trip to associate to this record.</errorMessage>
</ValidationRule>